# Mp3Converter

./: .gitignore  README.md  local.properties
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/danny_jiang/mp3converter/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp  soundtouch-jni.cpp  wrapper.c
app/src/main/cpp/libmp3lame/: VbrTag.c  lame.c  psymodel.c
app/src/main/java/com/example/danny_jiang/mp3converter/: Constant.java  LameUtils.java  MainActivity.java
app/src/main/java/com/example/danny_jiang/mp3converter/utils/: AudioProcessTask.java  Constant.java  DataEncodeThread.java  LameUtils.java  Mp3Recorder.java  PCMFormat.java  SoundTouchUtils.java  WavRecorder.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/danny_jiang/mp3converter/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
sample/: build.gradle
sample/src/androidTest/java/com/example/danny_jiang/sample/: ExampleInstrumentedTest.java
sample/src/main/: AndroidManifest.xml
sample/src/main/java/com/example/danny_jiang/sample/: App.java  MainActivity.java
sample/src/main/java/com/example/danny_jiang/sample/activity/: FinishRegisterActivity.java  LoginActivity.java  WelcomeActivity.java
sample/src/main/java/com/example/danny_jiang/sample/controller/: LoginController.java
sample/src/main/java/com/example/danny_jiang/sample/utils/: ClearWriteEditText.java  SoftKeyBoardStateHelper.java  ToastUtil.java
sample/src/main/res/layout/: activity_login.xml  activity_register_login.xml  activity_sample.xml  activity_welcome.xml
sample/src/main/res/values/: colors.xml
sample/src/test/java/com/example/danny_jiang/sample/: ExampleUnitTest.java
